--- a/head.html
+++ b/head.html
@@ -3,7 +3,6 @@
 <!-- Load CSS styles -->
 <link rel="stylesheet" href="/styles/colors.css" />
 <link rel="stylesheet" href="/styles/typography.css" />
-<link rel="stylesheet" href="/styles/buttons.css" />
 <link rel="stylesheet" href="/styles/utilities.css" />
 <link rel="stylesheet" href="/styles/typography.css" />
 <link rel="stylesheet" href="/styles/spacing.css" />
@@ -17,8 +16,8 @@
 <link rel="stylesheet" href="/styles/headers.css" />
 <link rel="stylesheet" href="/styles/footers.css" />
 <link rel="stylesheet" href="/styles/sections.css" />
-<link rel="stylesheet" href="/styles/tokens.css" />
-<link rel="stylesheet" href="/styles/tokens.scss" />
+<link rel="stylesheet" href="/styles/main.css" />
+
 
 <!-- Load custom fonts -->
 <link
