--- a/head.html
+++ b/head.html
@@ -1,31 +1,28 @@
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1" />
 
-<!-- Load CSS styles -->
-<link rel="stylesheet" href="/styles/colors.css" />
-<link rel="stylesheet" href="/styles/typography.css" />
-<link rel="stylesheet" href="/styles/buttons.css" />
-<link rel="stylesheet" href="/styles/utilities.css" />
-<link rel="stylesheet" href="/styles/typography.css" />
-<link rel="stylesheet" href="/styles/spacing.css" />
-<link rel="stylesheet" href="/styles/containers.css" />
-<link rel="stylesheet" href="/styles/animations.css" />
-<link rel="stylesheet" href="/styles/overlays.css" />
-<link rel="stylesheet" href="/styles/alerts.css" />
-<link rel="stylesheet" href="/styles/forms.css" />
-<link rel="stylesheet" href="/styles/tables.css" />
-<link rel="stylesheet" href="/styles/links.css" />
-<link rel="stylesheet" href="/styles/headers.css" />
-<link rel="stylesheet" href="/styles/footers.css" />
-<link rel="stylesheet" href="/styles/sections.css" />
-<link rel="stylesheet" href="/styles/tokens.css" />
-<link rel="stylesheet" href="/styles/tokens.scss" />
-
-<!-- Load custom fonts -->
 <link
-  href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@300;400;500;700&display=swap"
-  rel="stylesheet"
-/>
+  rel="preconnect"
+  href="https://fonts.googleapis.com" />
+<link
+  rel="preconnect"
+  href="https://fonts.gstatic.com"
+  crossorigin />
+<link
+  href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible+Next:ital,wght@0,200..800;1,200..800&display=swap"
+  rel="stylesheet" />
 
-<!-- AEM scripts -->
-<script src="/scripts/aem.js" type="module"></script>
-<script src="/scripts/scripts.js" type="module"></script>
+<link
+  rel="stylesheet"
+  href="/styles/styles.css" />
+<link
+  rel="stylesheet"
+  href="/styles/main.css" />
+
+<script
+  src="/scripts/aem.js"
+  type="module"></script>
+<script
+  src="/scripts/scripts.js"
+  type="module"></script>
