--- a/head.html
+++ b/head.html
@@ -19,6 +19,7 @@
 <link rel="stylesheet" href="/styles/sections.css" />
 <link rel="stylesheet" href="/styles/tokens.css" />
 <link rel="stylesheet" href="/styles/tokens.scss" />
+<link rel="stylesheet" href="/blocks/job-seeker-intro/job-seeker-intro.css
 
 <!-- Load custom fonts -->
 <link
