--- a/head.html
+++ b/head.html
@@ -4,6 +4,9 @@
 <link rel="stylesheet" href="/styles/styles.css"/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+<script src="https://unpkg.com/react@19.1.0/cjs/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@19.1.0/cjs/react-dom.development.js"></script>
+
 <!-- Load CSS styles -->
 <link rel="stylesheet" href="/styles/colors.css" />
 <link rel="stylesheet" href="/styles/typography.css" />
