debug: map react-dom/client correctly

--- a/head.html
+++ b/head.html
@@ -2,7 +2,7 @@
   {
     "imports": {
       "react": "https://unpkg.com/react@19.1.0/cjs/react.development.js",
-      "react-dom": "https://unpkg.com/react-dom@19.1.0/cjs/react-dom.development.js"
+      "react-dom/client": "https://unpkg.com/react-dom@19.1.0/cjs/react-dom-client.development.js"
     }
   }
 </script>
