dev: add scroll to importmap

--- a/head.html
+++ b/head.html
@@ -2,7 +2,8 @@
   {
     "imports": {
       "react": "https://unpkg.com/react@19.1.0/cjs/react.development.js",
-      "react-dom/client": "https://unpkg.com/react-dom@19.1.0/cjs/react-dom-client.development.js"
+      "react-dom/client": "https://unpkg.com/react-dom@19.1.0/cjs/react-dom-client.development.js",
+      "react-infinite-scroll-component": "https://unpkg.com/react-infinite-scroll-component@6.1.0/dist/index.umd.js"
     }
   }
 </script>
