--- a/head.html
+++ b/head.html
@@ -7,6 +7,10 @@
     }
   }
 </script>
+<script type="module">
+  import React, { useState, useEffect } from 'react';
+  import { createRoot } from 'react-dom/client';
+</script>
 
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <script src="/scripts/aem.js" type="module"></script>
