bugfix: switch to production react to avoid injecting process

--- a/head.html
+++ b/head.html
@@ -1,8 +1,8 @@
 <script type="importmap">
   {
     "imports": {
-      "react": "https://unpkg.com/react@19.1.0/cjs/react.development.js",
-      "react-dom/client": "https://unpkg.com/react-dom@19.1.0/cjs/react-dom-client.development.js",
+      "react": "https://unpkg.com/react@19.1.0/cjs/react.production.js",
+      "react-dom/client": "https://unpkg.com/react-dom@19.1.0/cjs/react-dom-client.production.js",
       "react-infinite-scroll-component": "https://unpkg.com/react-infinite-scroll-component@6.1.0/dist/index.umd.js"
     }
   }
