debug: switch to esm in importmap

--- a/head.html
+++ b/head.html
@@ -1,9 +1,9 @@
 <script type="importmap">
   {
     "imports": {
-      "react": "https://unpkg.com/react@19.1.0/cjs/react.production.js",
-      "react-dom/client": "https://unpkg.com/react-dom@19.1.0/cjs/react-dom-client.production.js",
-      "react-infinite-scroll-component": "https://unpkg.com/react-infinite-scroll-component@6.1.0/dist/index.umd.js"
+      "react": "https://esm.sh/react@19.1.0",
+      "react-dom/client": "https://esm.sh/react-dom@19.1.0",
+      "react-infinite-scroll-component": "https://esm.sh/react-infinite-scroll-component@6.1.0"
     }
   }
 </script>
