--- a/head.html
+++ b/head.html
@@ -2,7 +2,7 @@
   {
     "imports": {
       "react": "https://esm.sh/react@19.1.0",
-      "react-dom/client": "https://esm.sh/react-dom@19.1.0",
+      "react-dom/client": "https://esm.sh/react-dom@19.1.0/client",
       "react-infinite-scroll-component": "https://esm.sh/react-infinite-scroll-component@6.1.0"
     }
   }
