--- a/head.html
+++ b/head.html
@@ -2,6 +2,28 @@
   name="viewport"
   content="width=device-width, initial-scale=1" />
 
+<!-- Load CSS styles -->
+<link rel="stylesheet" href="/styles/colors.css" />
+<link rel="stylesheet" href="/styles/typography.css" />
+<link rel="stylesheet" href="/styles/buttons.css" />
+<link rel="stylesheet" href="/styles/utilities.css" />
+<link rel="stylesheet" href="/styles/typography.css" />
+<link rel="stylesheet" href="/styles/spacing.css" />
+<link rel="stylesheet" href="/styles/containers.css" />
+<link rel="stylesheet" href="/styles/animations.css" />
+<link rel="stylesheet" href="/styles/overlays.css" />
+<link rel="stylesheet" href="/styles/alerts.css" />
+<link rel="stylesheet" href="/styles/forms.css" />
+<link rel="stylesheet" href="/styles/tables.css" />
+<link rel="stylesheet" href="/styles/links.css" />
+<link rel="stylesheet" href="/styles/headers.css" />
+<link rel="stylesheet" href="/styles/footers.css" />
+<link rel="stylesheet" href="/styles/sections.css" />
+<link rel="stylesheet" href="/styles/tokens.css" />
+<link rel="stylesheet" href="/styles/tokens.scss" />
+<link rel="stylesheet" href="/blocks/formhero/formhero.css  " />
+
+<!-- Load custom fonts -->
 <link
   rel="preconnect"
   href="https://fonts.googleapis.com" />
