--- a/test/unit/fixtures/form/doc-fieldset.html
+++ b/test/unit/fixtures/form/doc-fieldset.html
@@ -3,6 +3,7 @@
     <fieldset class="panel-wrapper field-panel1 field-wrapper" data-id="panel1" id="panel1" name="panel1" data-repeatable="true" data-index="0">
       <div class="text-wrapper field-f2 field-wrapper" data-fieldset="panel1" data-id="f2" data-required-error-message="Please fill in this field." data-required="false"><input type="text" id="f2" name="f2" autocomplete="off"></div>
       <div class="text-wrapper field-f1 field-wrapper" data-fieldset="panel1" data-id="f1" data-required-error-message="Please fill in this field." data-required="false"><input type="text" id="f1" name="f1" autocomplete="off"></div>
+      <button class="item-remove" type="button"><i></i><span>Remove</span></button>
     </fieldset>
     <div class="repeat-actions"><button class="item-add" type="button"><i></i><span>Add</span></button></div>
   </div>
