--- a/404.html
+++ b/404.html
@@ -33,7 +33,7 @@
   <link rel="stylesheet" href="/styles/styles.css">
   <style>
     main.error {
-      min-height: calc(100vh - var(--nav-height));
+      min-height: calc(100rem - var(--nav-height));
       display: flex;
       align-items: center;
     }
