add head style to hide lists that haven't loaded

--- a/head.html
+++ b/head.html
@@ -27,3 +27,9 @@
 <script
   src="/scripts/scripts.js"
   type="module"></script>
+
+<style>
+  .list:not([data-block-status="loaded"]) {
+      display: none;
+  }
+</style>
