--- a/head.html
+++ b/head.html
@@ -20,6 +20,11 @@
 <link
   rel="stylesheet"
   href="/styles/main.css" />
+<style>
+  .row:not([data-section-status="loaded"]) > * {
+      display: none;
+  }
+</style>
 
 <script
   src="/scripts/aem.js"
