fix: extend lightblue option too global styles

--- a/head.html
+++ b/head.html
@@ -24,6 +24,9 @@
   .row:not([data-section-status="loaded"]) > * {
       display: none;
   }
+  .lightblue {
+      background-color: lightblue;
+  }
 </style>
 
 <script
