dev: make hide until loaded optional

--- a/head.html
+++ b/head.html
@@ -21,7 +21,7 @@
   rel="stylesheet"
   href="/styles/main.css" />
 <style>
-  .row:not([data-section-status="loaded"]) > * {
+  .row.hide-until-loaded:not([data-section-status="loaded"]) > * {
       display: none;
   }
   .lightblue {
